# hermes-tray-lib

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install-hooks.sh
src/hermes_tray/: __init__.py  __main__.py  config.py  indicator.py  lifecycle.py  liveness.py  menu.py  state.py  watcher.py
tests/: conftest.py  test_config.py  test_indicator.py  test_lifecycle.py  test_liveness.py  test_menu.py  test_state.py  test_watcher.py
